The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2006-01-09 DP         Add -a and -q command line options to auto connect to a server and open a query window respectively [Magnus Hagander]
    <li>2006-01-09 DP  1.4.2  Honour the copy quoting setting properly in the SQL results pane [Magnus Hagander]
    <li>2006-01-09 DP         Use Ctrl-A to select all results in the query results pane. [Magnus Hagander]
    <li>2006-01-09 DP  1.4.2  Set the initial Unicode/Local charset options correctly in the Export dialogue [Magnus Hagander]
    <li>2005-12-26 AP  1.4.2  Fix PK detection in EditGrid per Andrus Moor
    <li>2005-12-26 AP  1.4.2  Fix Bitmap Index explain per Alexander Kirpa
    <li>2005-12-23 DP  1.4.2  Use ELSIF not ELSEIF in pgagent.sql for compatibility with 7.x servers [Glen Sasek]
    <li>2005-12-22 HS         dlgLanguage name+comment, dlgDatabase comment
    <li>2005-12-15 DP  1.4.2  Exclude system schemas by name rather than OID, so that 'public' can be safely renamed.
    <li>2005-12-12 AP  1.4.2  fix slony node statistics
    <li>2005-12-11 AP         support 8.1 language templates
    <li>2005-12-11 AP  1.4.2  Fix: Unsubscribe set on receiver
    <li>2005-12-11 AP  1.4.2  Another wxComboBox(2.6.2) related fix
    <li>2005-12-09 DP  1.4.1  Default the encoding of new databases to the cluster encoding, per Peter Eisentraut.
    <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
    <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
    <li>2005-12-03 AP  1.4.1  Major fix for wx2.6.2 API changes (comboboxes)