@@ -30,6 +30,20 @@
   <li><b>Count rows if estimated less than</b>&nbsp;- In the object browser, if 
   the estimated number of rows in a table (as read from the table statistics) is 
   below this limit, a SELECT count(*) will be performed to find the exact value.<br>&nbsp;</li>
+
+  <li><b>Indent characters</b> - This option specifies the number of characters
+  to indent with.<br>&nbsp;</li>
+
+  <li><b>Result copy quoting</b> - This option specifies how the fields should be quoted when
+  copied to the clipboard from the result list. Quoting can be applied to string columns only
+  (i.e. numeric columns will not be quoted) or all columns regardless of data type.<br>&nbsp;</li>
+
+  <li><b>Result copy quote character</b> - This option specifies which character should be used
+  to quote the values when copied to the clipboard from the result list. It has no effect if 
+  Result copy quoting is set to none.<br>&nbsp;</li>
+
+  <li><b>Result copy field separator</b> - This option specifies which character should be used
+  to separate the fields copied to the clipboard from the result list.<br>&nbsp;</li>
   
    <li><b>Copy SQL from main form to SQL dialogue</b> - When opening the Query 
    Tool, with this option selected, any object definition being displayed in the 
