@@ -3,7 +3,7 @@
   <object class="wxDialog" name="frmOptions">
     <title>Options</title>
     <pos>0,0d</pos>
-    <size>246,166d</size>
+    <size>246,196d</size>
     <style>wxDEFAULT_DIALOG_STYLE|wxDIALOG_MODAL|wxCAPTION|wxSYSTEM_MENU</style>
     <object class="wxNotebook" name="nbOptions">
       <object class="notebookpage">
@@ -283,7 +283,7 @@
             <pos>175,20d</pos>
             
             
-            <size>35,-1d</size>
+            <size>55,-1d</size>
             
             
             <tooltip>Maximums rows to retrieve into output window; 0 = unlimited</tooltip>
@@ -305,7 +305,7 @@
             <pos>175,35d</pos>
             
             
-            <size>35,-1d</size>
+            <size>55,-1d</size>
           </object>
           <object class="wxStaticText" name="stAutoRowCount">
             
@@ -321,7 +321,7 @@
             <pos>175,50d</pos>
             
             
-            <size>35,-1d</size>
+            <size>55,-1d</size>
           </object>
           <object class="wxStaticText" name="stIndent">
             <label>Indent characters</label>
@@ -329,8 +329,53 @@
           </object>
           <object class="wxTextCtrl" name="txtIndent">
             <pos>175,65d</pos>
-            <size>35,-1d</size>
+            <size>55,-1d</size>
           </object>
+          
+          <object class="wxStaticText" name="stCopyQuote">
+           <label>Result copy quoting</label>
+           <pos>5,82d</pos>
+          </object>
+          <object class="wxComboBox" name="cbCopyQuote">
+           <content>
+            <item>None</item>
+            <item>Strings</item>
+            <item>All</item>
+           </content>
+           <pos>175,80d</pos>
+           <size>55,-1d</size>
+           <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+          </object>
+          
+          <object class="wxStaticText" name="stCopyQuoteChar">
+           <label>Result copy quote character</label>
+           <pos>5,97d</pos>
+          </object>
+          <object class="wxComboBox" name="cbCopyQuoteChar">
+           <content>
+            <item>"</item>
+            <item>'</item>
+           </content>
+           <pos>175,95d</pos>
+           <size>55,-1d</size>
+           <style>wxCB_DROPDOWN</style>
+          </object>
+
+          <object class="wxStaticText" name="stCopySeparator">
+           <label>Result copy field separator</label>
+           <pos>5,112d</pos>
+          </object>
+          <object class="wxComboBox" name="cbCopySeparator">
+           <content>
+            <item>;</item>
+            <item>,</item>
+            <item>|</item>
+           </content>
+           <pos>175,110d</pos>
+           <size>55,-1d</size>
+           <style>wxCB_DROPDOWN</style>
+          </object>
+
           <object class="wxCheckBox" name="chkStickySql">
             
             
@@ -340,7 +385,7 @@
             <checked>1</checked>
             
             
-            <pos>5,82d</pos>
+            <pos>5,127d</pos>
             
             
             <size>226,12d</size>
@@ -418,7 +463,7 @@
         </object>
       </object>
       <pos>2,3d</pos>
-      <size>240,141d</size>
+      <size>240,171d</size>
     </object>
     <object class="wxButton" name="wxID_HELP">
       
@@ -426,7 +471,7 @@
       <label>&amp;Help</label>
       
       
-      <pos>2,147d</pos>
+      <pos>2,177d</pos>
       
       
       <tooltip>Accept the current settings and close the dialogue.</tooltip>
@@ -440,7 +485,7 @@
       <default>1</default>
       
       
-      <pos>140,147d</pos>
+      <pos>140,177d</pos>
       
       
       <tooltip>Accept the current settings and close the dialogue.</tooltip>
@@ -454,7 +499,7 @@
       <default>0</default>
       
       
-      <pos>193,147d</pos>
+      <pos>193,177d</pos>
       
       
       <tooltip>Cancel any changes and close the dialogue.</tooltip>
