@@ -18,6 +18,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-01-11 DP         Allow result copy quoting configuration to be set explicitly rather than using the result export settings [Magnus Hagander]
     <li>2006-01-09 DP         Add -a and -q command line options to auto connect to a server and open a query window respectively [Magnus Hagander]
     <li>2006-01-09 DP  1.4.2  Honour the copy quoting setting properly in the SQL results pane [Magnus Hagander]
     <li>2006-01-09 DP         Use Ctrl-A to select all results in the query results pane. [Magnus Hagander]
